# btpytools

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  buildit.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test_and_deploy.yml
btpytools/: __init__.py  brainreg_bt.py  btrfs.py  compressRawData.py  recipe.py  summariseAcquisitions.py  tools.py  transferToServer.py
btpytools.egg-info/: .gitignore
src/btpyutils/: recipe.py  summariseAcquisitions.py  transferToServer.py
src/btutils/: compressRawData.py
tests/data/contains_data_subfolders_01/dir1/: recipe_SM_1099839_210521_171144.yml
tests/data/valid_sample_directory/: acqLog_SM_1099839.txt
tests/data/valid_sample_directory_01/: autoROI_settings.yml
tests/data/valid_sample_directory_01/downsampled_stacks/025_micron/: ds_SM_1099839_210521_171144_25_25_ch02_chan_2_red.txt  ds_SM_1099839_210521_171144_25_25_ch03_chan_3_green.txt
tests/data/valid_sample_directory_01/downsampled_stacks/050_micron/: ds_SM_1099839_210521_171144_50_50_ch03_chan_3_green.txt
tests/data/valid_sample_directory_02/downsampled_stacks/050_micron/: ds_SM_1099839_210521_171144_50_50_ch02_chan_2_red.txt
tests/test_unit/: btpytools_test.py  test_brainreg_imports.py  test_btpytools_tools.py  test_btpytools_transferToServer.py
tests/tests/: basic.py
