[metadata]
license_file = LICENSE
name = btpytools
version = 0.1.7
author = Rob Campbell
author_email = rob.campbell@ucl.ac.uk
description = Helper functions for BakingTray and StitchIt
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/SainsburyWellcomeCentre/btpytools
project_urls =
    Source = https://bakingtray.mouse.vision
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python

[options]
packages =
    btpytools
python_requires = >=3.6
install_requires=
    pyyaml
include_package_data = True

[options.entry_points]
console_scripts =
    summariseAcqs = btpytools.summariseAcquisitions:main
    compressRawData = btpytools.compressRawData:main
    transferToServer = btpytools.transferToServer:main

